<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">


        <TextView
            android:id="@+id/editarMascotasHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/edit_mascota"
            android:textColor="@color/ug"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/especie"
            android:textSize="18sp"
            android:layout_marginBottom="4dp" />

        <Spinner
            android:id="@+id/editarspinnerTipoMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raza_label"
            android:textSize="18sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/editaretRaza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/raza_hin"
            android:inputType="text"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edad_label"
            android:textSize="18sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/editaretEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edad_hin"
            android:inputType="text"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_label"
            android:textSize="18sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/editaretDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion_hin"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:maxLines="5"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso_label"
            android:textSize="18sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/editaretPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/peso_hin"
            android:inputType="numberDecimal"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genero_label"
            android:textSize="18sp"
            android:layout_marginBottom="4dp" />

        <Spinner
            android:id="@+id/editarspinnerGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url_label"
            android:textSize="18sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/editaretUrlImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/url_hin"
            android:inputType="textUri"
            android:layout_marginBottom="20dp" />
        <Button
            android:id="@+id/btneditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_mascota"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp" />

    </LinearLayout>


</ScrollView>