<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">


        <ImageView
            android:id="@+id/image_mascota"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"/>

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tipoMascotaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:text="@string/especie" />

            <TextView
                android:id="@+id/razaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tipoMascotaTextView"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:text="@string/raza_hin" />

            <TextView
                android:id="@+id/edadTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/razaTextView"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:text="@string/edad_label" />

            <TextView
                android:id="@+id/pesoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edadTextView"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:text="@string/peso_label" />

            <TextView
                android:id="@+id/generoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pesoTextView"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:text="@string/genero_label" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/updateButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="60dp"
                android:src="@drawable/ic_update"
                app:tint="@color/ug" />

            <ImageView
                android:id="@+id/deleteButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"

                android:src="@drawable/ic_delete"
                app:tint="@color/ug" />

            <ImageView
                android:id="@+id/adoptarButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_adoptar"
                app:tint="@color/ug" />

        </RelativeLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>